--- a/css/layout.css
+++ b/css/layout.css
@@ -23,7 +23,7 @@ label {
 input[type="text"],
 input[type="number"],
 input[type="date"],
-select {
+select, input{
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
