--- a/css/layout.css
+++ b/css/layout.css
@@ -23,12 +23,13 @@ label {
 input[type="text"],
 input[type="number"],
 input[type="date"],
-select, input{
+select {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 3px;
+    margin-left: 0;
 }
 
 button {
